- fixed seating plan css spacing - fixed bug when you have to navigate back twice after saving a seating plan to return to the bookings page - added error messages to new order webhook over discord

--- a/webapp/static/scss/seatingplan.scss
+++ b/webapp/static/scss/seatingplan.scss
@@ -152,7 +152,8 @@ div.row {
 	//flex-direction: row;
 	//align-items: center;
 	//justify-content: space-evenly;
-	grid-template-columns: repeat(12, 1fr);
+	//grid-template-columns: repeat(12, 1fr);
+	grid-template-columns: repeat(12, 5.7rem);
 	grid-template-rows: 1fr;
 	//gap: .5rem;
 }
